# Christin

./: .fossa.yml  .gitguardian.yml  Dockerfile  README.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  bandit.yaml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/.github/workflows/: docker-publish.yml  main.yaml
backend/application/: __init__.py  extensions.py
backend/application/controllers/: __init__.py  common_model_opt.py  dashboard_datamanage.py  dashboard_main.py  dict_data_table.py  herb.py  main_apis_controllers.py  prescription.py
backend/application/forms/: __init__.py  dict_table_data.py  disease.py  generic_form_schema.py  herb.py  ingredient.py  prescription.py  symptom.py  target.py  user.py
backend/application/models/: __init__.py  base.py  dict_table.py  disease.py  ingredient.py  labels.py  related_tables.py  symptom.py  target.py
backend/application/nlp_model/: meta.json
backend/application/server/: __init__.py  tasks.py
backend/application/swagger_files/: delete_project.yml  my_model.yml  (+4 more)
backend/config/: __init__.py  apiconfig.py  baseconfig.py  develop.py  production.py  secure.py  settings.py  test.py
backend/datas/: structural_data_json.json  structural_data_xml.xml  test_data.csv  test_data.numbers  test_data.txt  test_data.xlsx  脑血管病入院记录20210220001.txt
backend/neo4j/: Dockerfile  neo4j.conf
backend/test/: __init__.py  conftest.py
backend/tests/: conftest.py
(+238 files in other folders)
